# social_recovery_utils

./: Cargo.toml  README.md
crates/email/: Cargo.toml
crates/email/src/: error.rs  lib.rs  mock.rs  parser.rs  types.rs
crates/openid/: Cargo.toml
crates/openid/src/: lib.rs
crates/passkey/: Cargo.toml
crates/passkey/src/: lib.rs
crates/utils/: Cargo.toml
src/: main.rs  utils.rs
