[package]
name = "openid_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
hex = "*"
sha2 = "0.10.6"
base64 = "0.21.0"
anyhow = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint-dig = "^0.7"
ethers = { version = "2.0" }

jwt-simple = "0.11"

utils = { path = "../utils" }
