[package]
name = "passkey_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
hex = "*"
sha2 = "0.10.6"
base64 = "0.21.0"
anyhow = { version = "1.0" }
url = "2"
coset = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p256 = { version = "0.13", features = ["pem", "arithmetic", "jwk"] }
ethers = { version = "2.0" }
passkey = { git = "https://github.com/1Password/passkey-rs.git" }
passkey-types = { git = "https://github.com/1Password/passkey-rs.git" }
async-trait = "0.1"

utils = { path = "../utils" }
